@@ -1,0 +1,9 @@
+# Solaris on sparc
+# Dual processor
+MAKEJOBFLAGS = -j 2
+TARGETOS = i386-sun-solaris
+HOSTOS = i386-sun-solaris
+
+TARGETCC = cc
+TARGETCXX = CC
+
